--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Mohammed Abeel Ahmed Mohiuddin and I'm a <span class="typing-2"></span></div>
-                    <p>I started learning when I was 18 years old because i wanted to make my own website and video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications..</p>
+                    <p>I started learning when I was 18 years old i started learning coding because i wanted to make my own website and video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications..</p>
                     <a href="https://drive.google.com/file/d/1POHD3ekaP40rams2FcUQ9Y2sdNpyIb-k/view?usp=sharing" target="_blank">Download Resume</a>
                 </div>
             </div>
