--- a/index.html
+++ b/index.html
@@ -211,6 +211,13 @@
                                 <div class="sub-title">mohammedabeel18@gmail.com</div>
                             </div>
                         </div>
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">linkedin</div>
+                                <div class="sub-title"><a href="https://www.linkedin.com/in/mohammed-abeel-007b43193">Linkedin Profile</a></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="column right">
