--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Mohammed Abeel Ahmed Mohiuddin</div>
+                <div class="text-2">Abeel Ahmed Mohiuddin Mohammed</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
             </div>
         </div>
@@ -56,7 +56,7 @@
                     <img src="images/profile-1.jpeg" alt="abbupalan-image">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Mohammed Abeel Ahmed Mohiuddin and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Abeel Ahmed Mohiuddin Mohammed and I'm a <span class="typing-2"></span></div>
                     <p>I started learning coding when I was 18 years old because i wanted to make my own website and video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications..</p>
                     <a href="https://drive.google.com/file/d/1FsdQSFLgQfVtEmAAtJaUo5W47Fq1ShWI/view?usp=sharing" target="_blank">Download Resume</a>
                 </div>
@@ -159,8 +159,8 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Mohammed Abeel</div>
-                        <p>Good at Web development and designing & Experienced in Frontend Web Development</p>
+                        <div class="text">Abeel Mohammed</div>
+                        <p>Good at Software development and designing & Experienced in  Web Development</p>
                     </div>
                 </div>
                 <div class="card">
@@ -194,7 +194,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Mohammed Abeel Ahmed Mohiuddin</div>
+                                <div class="sub-title">Abeel Ahmed Mohiuddin Mohammed</div>
                             </div>
                         </div>
                         <div class="row">
